# oblivion

./: .gitignore  README.md  package-lock.json  pyproject.toml
cortisol/: package-lock.json  package.json
cortisol/src/app/: MyApp.tsx  globals.css  layout.tsx  page.tsx
cortisol/src/app/components/: Achievement.tsx  Advertisement.tsx  AdvertisementCard.tsx  Advertisements.tsx  Badge.tsx  Calendar.tsx  DeleteButton.tsx  EditButton.tsx  Editor.tsx  FlashCard.tsx  LoginSystem.tsx  LoginSystemBox.tsx  LoginSystemButton.tsx  Navigation.tsx  Note.tsx  Sidebar.tsx  StatButton.tsx  StatisticsModal.tsx
cortisol/src/app/context/: AuthContext.tsx  AuthenticationContext.tsx
cortisol/src/app/editor/: page.tsx
cortisol/src/app/login/: page.tsx
cortisol/src/app/notes/: layout.tsx  page.tsx
cortisol/src/app/notes/[id]/: page.tsx
cortisol/src/app/profile/: page.tsx
cortisol/src/app/register/: page.tsx
oxytocin/: manage.py
oxytocin/notes/: admin.py  category_decider.py  models.py  serializers.py  urls.py  views.py
oxytocin/notes/migrations/: 0001_initial.py  0002_remove_notes_date_created_notes_category_and_more.py  0003_category_alter_notes_category.py  0004_alter_notes_content.py
oxytocin/oxytocin/: asgi.py  models.py  settings.py  urls.py  views.py  wsgi.py
oxytocin/oxytocin/migrations/: 0001_initial.py  0002_delete_notes.py  0002_notes_title.py  0003_alter_notes_title.py  0004_alter_notes_title.py
