[tool.poetry]
name = "oblivion"
version = "0.1.0"
description = ""
authors = ["Dongyeon Park <26868715+plzfday@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.3"
openai = "^1.13.3"
django-environ = "^0.11.2"
djangorestframework = "^3.14.0"
django-cors-headers = "^4.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"